# telemetry-platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  DAY5_RELEASE_NOTES.md  Doxyfile  K6_TESTING_QUICK_FIX.md  LICENSE  LYRIA_SOFT_EXPERIENCE.md  README.md  build_common_only.txt  build_final_full.txt  build_green_attempt.txt  build_gui_attempt2.txt  build_release.txt  configure_clean.txt  configure_fbuild.ps1  docker-compose.yml  high_concurrency_results.json  organize_scripts.ps1  run_load_test.ps1  setup_grafana_k6.ps1  test_results.json  test_results.txt
.github/ISSUE_TEMPLATE/: automate-qt-path.md
.github/workflows/: docs.yml  load-testing.yml  microservices-ci.yml
common/: CMakeLists.txt
common/include/telemetry_common/: config.h  i_redis_client.h  json_utils.h  proto_adapter.h  redis_client.h  types.h  uuid_generator.h
common/proto/: telemetry.proto
common/src/: config.cpp  json_utils.cpp  proto_adapter.cpp  redis_client.cpp  uuid_generator.cpp
common/tests/: mock_redis_client.h  test_proto_adapter.cpp  test_redis_client_unit.cpp  test_redis_connection.cpp
docs/: ARCHITECTURE_DIAGRAMS.md  BAUD_RATE_VISUAL_GUIDE.md  BUILD_GUIDE.md  BUILD_TROUBLESHOOTING.md  CI_CD_PIPELINE.md  DAY3_COMPLETE.md  DAY3_EXTENDED_CHECKLIST.md  DAY3_EXTENDED_COMPLETE.md  DAY3_PROGRESS.md  DAY4_INTERVIEW_NOTES.md  DAY4_VISUAL_SUMMARY.md  DAY5_COMPLETE_SUMMARY.md  DAY_2_REFACTORING.md  DAY_2_SUMMARY.md  DAY_3_BUILD_ISSUES.md  DOCUMENTATION_TOOLS_COMPARISON.md  DOXYGEN_INSTALL_MANUAL.md  DOXYGEN_README.md  DOXYGEN_SETUP_GUIDE.md  END_TO_END_TESTING_GUIDE.md  GITHUB_PACKAGES_SETUP.md  GIT_COMMIT_GUIDE.md  GOOGLE_TEST_CHEAT_SHEET.md  IMPLEMENTATION_STATUS.md  INTERVIEW_QUICK_REFERENCE.md  NEXT_STEPS_ROADMAP.md  P99_OSCILLOSCOPE_MEASUREMENT.md  PERFORMANCE_BENCHMARKS.md  PROFILING_EXERCISE_DAY5.md  PROFILING_GUIDE.md  PROTOBUF_BUILD_ISSUE.md  PROTOBUF_MIGRATION.md  QA_VERIFICATION_STEPS.md  README.md  SYSTEM_ARCHITECTURE_INTERVIEW_GUIDE.md  TESTING_FRAMEWORKS_COMPARISON.md  TESTING_SETUP_GUIDE.md  TTP_COMPLETION_SPRINT.md  flowchart TB.mmd  integration_architecture_complete.md  (+1 more)
docs/archives/development-journey/: DAY3_FINAL_SUMMARY.md  DAY4_INTERVIEW_NOTES.md  DAY4_STATUS.md  DAY5_PERFORMANCE_TEST_RESULTS.md  DAY_2_COMPLETION_STATUS.md  DAY_2_GOOGLE_TEST_MIGRATION.md  DAY_2_PROTOBUF_VS2026_SUMMARY.md  DAY_3_BUILD_SUCCESS.md  README.md
docs/doxygen/html/: _gateway_core_8cpp.html  _gateway_core_8cpp__incl.map  _gateway_core_8cpp__incl.md5  _gateway_core_8cpp_source.html  _gateway_core_8h.html  _gateway_core_8h.js  _gateway_core_8h__dep__incl.map  _gateway_core_8h__dep__incl.md5  _gateway_core_8h__incl.map  _gateway_core_8h__incl.md5  _gateway_core_8h_source.html  _i_cloud_client_8h.html  _i_cloud_client_8h.js  _i_cloud_client_8h__dep__incl.map  _i_cloud_client_8h__dep__incl.md5  _i_cloud_client_8h__incl.map  _i_cloud_client_8h__incl.md5  _i_cloud_client_8h_source.html  _log_8h.html  _log_8h.js  _log_8h__dep__incl.map  _log_8h__dep__incl.md5  _log_8h__incl.map  _log_8h__incl.md5  _log_8h_source.html  _r_e_a_d_m_e_8md.html  _redis_client_8cpp.html  _redis_client_8cpp.js  _redis_client_8cpp__incl.map  _redis_client_8cpp__incl.md5  _redis_client_8cpp_source.html  _redis_client_8h.html  _redis_client_8h.js  _redis_client_8h__dep__incl.map  _redis_client_8h__dep__incl.md5  _redis_client_8h__incl.map  _redis_client_8h__incl.md5  _redis_client_8h_source.html  _redis_publisher_8h.html  _redis_publisher_8h.js  (+719 more)
docs/doxygen/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  (+115 more)
docs/doxygen/latex/: _gateway_core_8cpp.tex  _gateway_core_8cpp__incl.md5  _gateway_core_8cpp_source.tex  _gateway_core_8h.tex  _gateway_core_8h__dep__incl.md5  _gateway_core_8h__incl.md5  _gateway_core_8h_source.tex  _i_cloud_client_8h.tex  _i_cloud_client_8h__dep__incl.md5  _i_cloud_client_8h__incl.md5  _i_cloud_client_8h_source.tex  _log_8h.tex  _log_8h__dep__incl.md5  _log_8h__incl.md5  _log_8h_source.tex  _redis_client_8cpp.tex  _redis_client_8cpp__incl.md5  _redis_client_8cpp_source.tex  _redis_client_8h.tex  _redis_client_8h__dep__incl.md5  _redis_client_8h__incl.md5  _redis_client_8h_source.tex  _redis_publisher_8h.tex  _redis_publisher_8h__incl.md5  _redis_publisher_8h_source.tex  _rest_cloud_client_8cpp.tex  _rest_cloud_client_8cpp__incl.md5  _rest_cloud_client_8cpp_source.tex  _rest_cloud_client_8h.tex  _rest_cloud_client_8h__dep__incl.md5  _rest_cloud_client_8h__incl.md5  _rest_cloud_client_8h_source.tex  _task_8cpp.tex  _task_8cpp__incl.md5  _task_8cpp_source.tex  _task_8h.tex  _task_8h__dep__incl.md5  _task_8h__incl.md5  _task_8h_source.tex  _telemetry_handler_8h.tex  (+285 more)
ingestion/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile
ingestion/cmake/: GetGit.cmake
ingestion/docs/mermaid/: Control flow_day10.mmd  High level diagram_day10.mmd
ingestion/gateway/src/: http_server.cpp
ingestion/gui/: CMakeLists.txt
processing/: .gitignore  CMakeLists.txt  LICENSE
processing/docs/: architecture.md  day1_complete.md  day1_implementation.md
processing/examples/: CMakeLists.txt  simple_producer.cpp
processing/include/: task_queue.h
processing/include/telemetry_processor/: RedisClient.h  Task.h  TelemetryHandler.h
processing/src/: CMakeLists.txt  main.cpp  task_queue.cpp
processing/src/core/: RedisClient.cpp  Task.cpp
processing/tests/: CMakeLists.txt  test_redis_client.cpp  test_task.cpp
scripts/: build.ps1  build_with_gui.ps1  run_grafana_test.ps1
test_results/: k6_results_20251229_170357.csv
tests/: CMakeLists.txt  test_task_queue.cpp
tests/catch2/: CMakeLists.txt  test_task_queue_catch2.cpp
tests/integration/: README.md  pytest.ini  requirements.txt  test_pipeline.py
tests/load/: README.md  grafana_test.js  health_check.js  high_concurrency_test.js  simple_test.js  telemetry_ingestion.js
tools/: deploy_qt_gui.ps1
